--- a/src/plugins/render/CMakeLists.txt
+++ b/src/plugins/render/CMakeLists.txt
@@ -49,6 +49,6 @@ endif()
 find_package( Perl )
 marble_set_package_properties( Perl PROPERTIES URL "https://www.perl.org" )
 marble_set_package_properties( Perl PROPERTIES TYPE OPTIONAL PURPOSE "generation of sources in the APRS plugin" )
-if(PERL_FOUND AND NOT ANDROID)
+if(PERL_FOUND AND NOT ANDROID AND NOT "$ENV{KDECI_BUILD}" STREQUAL "TRUE")
     add_subdirectory( aprs )
 endif()
