Fix dependencies in MarbleConfig.cmake

--- a/src/lib/marble/MarbleConfig.cmake.in
+++ b/src/lib/marble/MarbleConfig.cmake.in
@@ -5,17 +5,17 @@ set(MARBLE_NO_WEBKITWIDGETS @MARBLE_NO_WEBKITWIDGETS@)
 include(CMakeFindDependencyMacro OPTIONAL RESULT_VARIABLE _CMakeFindDependencyMacro_FOUND)
 
 if (_CMakeFindDependencyMacro_FOUND)
+    find_dependency(Qt6Core5Compat @REQUIRED_QT_VERSION@)
     find_dependency(Qt6Xml @REQUIRED_QT_VERSION@)
     find_dependency(Qt6Widgets @REQUIRED_QT_VERSION@)
     if (NOT MARBLE_NO_WEBKITWIDGETS)
-        find_dependency(Qt6WebEngine @REQUIRED_QT_VERSION@)
         find_dependency(Qt6WebEngineWidgets @REQUIRED_QT_VERSION@)
     endif()
 else()
+    find_package(Qt6Core5Compat REQUIRED)
     find_package(Qt6Xml REQUIRED)
     find_package(Qt6Widgets REQUIRED)
     if (NOT MARBLE_NO_WEBKITWIDGETS)
-        find_package(Qt6WebEngine REQUIRED)
         find_package(Qt6WebEngineWidgets REQUIRED)
     endif()
 endif()
