show headers in qtc6

--- a/src/3rdparty/o5mreader/CMakeLists.txt
+++ b/src/3rdparty/o5mreader/CMakeLists.txt
@@ -9,6 +9,8 @@ include_directories(
 )
 
 set(o5mreader_SRCS
-    o5mreader.cpp)
+    o5mreader.cpp
+    o5mreader.h
+)
 
 add_library(o5mreader STATIC ${o5mreader_SRCS})
