--- a/src/3rdparty/sgp4/CMakeLists.txt
+++ b/src/3rdparty/sgp4/CMakeLists.txt
@@ -8,7 +8,12 @@ include_directories(
 set( sgp4_SRCS
  sgp4ext.cpp
  sgp4unit.cpp
- sgp4io.cpp )
+ sgp4io.cpp
+
+ sgp4ext.h
+ sgp4unit.h
+ sgp4io.h
+)
 
 add_library(sgp4 STATIC ${sgp4_SRCS})
 
