make it compile with QT_NO_CAST_FROM_ASCII

--- a/src/plugins/CMakeLists.txt
+++ b/src/plugins/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-#add_definitions(-DQT_NO_CAST_FROM_ASCII)
+add_definitions(-DQT_NO_CAST_FROM_ASCII)
 # Logging for Marble plugins
 ecm_qt_export_logging_category(
     IDENTIFIER "MARBLE_PLUGINS"
