continue to add QStringLiteral

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -53,6 +53,7 @@ endif()
 
 add_subdirectory(3rdparty/o5mreader)
 add_subdirectory(3rdparty/sgp4)
+#add_definitions(-DQT_NO_CAST_FROM_ASCII)
 add_subdirectory(lib/marble)
 add_subdirectory(lib/astro)
 add_subdirectory(lib/marble/declarative)
