--- a/src/apps/behaim/org.kde.marble.behaim.desktop
+++ b/src/apps/behaim/org.kde.marble.behaim.desktop
@@ -32,5 +32,5 @@ Name[uk]=Бегайм-Marble
 Name[x-test]=xxMarble Behaimxx
 Name[zh_CN]=Marble 贝海姆地球仪
 Name[zh_TW]=Marble 倍海姆
-Exec=marble-Behaim
+Exec=marble-behaim
 Icon=org.kde.marble.behaim
