Add categories to Behaim desktop file
Same values in Marble and Marble Maps.
Without this entry, the app is listed as unmaintained on apps.kde.org

--- a/src/apps/behaim/org.kde.marble.behaim.desktop
+++ b/src/apps/behaim/org.kde.marble.behaim.desktop
@@ -35,3 +35,4 @@ Name[zh_CN]=Marble 贝海姆地球仪
 Name[zh_TW]=Marble 倍海姆
 Exec=marble-behaim
 Icon=org.kde.marble.behaim
+Categories=Qt;KDE;Education;Geoscience;Geography;Science;Maps;
