Remove usage of some Qt CMake usage with ECMQmlModule
We use this, so we don't need to set qt_policy ourselves or
ecm_add_qml_module. Also fixes non-KF6 builds.

--- a/examples/cpp/marbleQuick2/CMakeLists.txt
+++ b/examples/cpp/marbleQuick2/CMakeLists.txt
@@ -5,7 +5,7 @@ add_executable(marbleQuick2 main.cpp)
 
 target_link_libraries(marbleQuick2 PUBLIC Qt::Quick Qt::Widgets)
 
-qt_add_qml_module(marbleQuick2
+ecm_add_qml_module(marbleQuick2
     URI org.kde.marble.quick
     QML_FILES
         Main.qml
