Don't build behaim or marble-maps targets in non-KF builds
These depend on KDE frameworks, so don't try to build them when don't
have them.

--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -11,6 +11,8 @@ if(BUILD_MARBLE_APPS)
         endif()
     endif()
 
-    add_subdirectory(behaim)
-    add_subdirectory(marble-maps)
+    if (TARGET KF6::ConfigGui AND TARGET KF6::I18n AND TARGET KF6::CoreAddons)
+        add_subdirectory(behaim)
+        add_subdirectory(marble-maps)
+    endif()
 endif()
