--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ include:
     - /gitlab-templates/linux-qt6.yml
     - /gitlab-templates/freebsd-qt6.yml
     - /gitlab-templates/windows-qt6.yml
+    - /gitlab-templates/android-qt6.yml
     - /gitlab-templates/flatpak.yml
     - /gitlab-templates/clang-format.yml
 
