--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -2,17 +2,20 @@
 # SPDX-License-Identifier: CC0-1.0
 
 Dependencies:
-- 'on': ['@all']
+- 'on': ['Linux', 'FreeBSD', 'Windows', 'Android']
   'require':
     'frameworks/extra-cmake-modules': '@stable-kf6'
-    'frameworks/kio': '@stable-kf6'
-    'frameworks/kwallet': '@stable-kf6'
-    'frameworks/kcrash': '@stable-kf6'
     'frameworks/ki18n': '@stable-kf6'
     'frameworks/kcoreaddons': '@stable-kf6'
-    'frameworks/knewstuff': '@stable-kf6'
     'frameworks/kconfig': '@stable-kf6'
+
+- 'on': ['Linux', 'FreeBSD', 'Windows']
+  'require':
     'frameworks/kparts': '@stable-kf6'
+    'frameworks/knewstuff': '@stable-kf6'
+    'frameworks/kcrash': '@stable-kf6'
+    'frameworks/kwallet': '@stable-kf6'
+    'frameworks/kio': '@stable-kf6'
 
 Options:
  cmake-options: "-DBUILD_MARBLE_TOOLS=ON"
