--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -16,6 +16,16 @@ apps:
     command: usr/bin/marble
     plugs:
       - audio-record
+      - browser-support
+    environment:
+      - QT_PLUGIN_PATH: "$QT_PLUGIN_PATH:$SNAP/usr/lib/$CRAFT_ARCH_TRIPLET/marble"
+layout:
+    /usr/share/marble:
+        symlink: $SNAP/usr/share/marble
+    /usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/marble:
+        symlink: $SNAP/usr/lib/$CRAFT_ARCH_TRIPLET_BUILD_FOR/marble
+    /usr/share/qt6:
+        bind: $SNAP/usr/share/qt6
 slots:
   session-dbus-interface:
     interface: dbus
