--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -17,6 +17,12 @@
     ],
     "modules": [
         {
+            "name": "kirigamiaddons",
+            "config-opts": [ "-DBUILD_TESTING=OFF" ],
+            "buildsystem": "cmake-ninja",
+            "sources": [ { "type": "git", "url": "https://invent.kde.org/libraries/kirigami-addons.git" } ]
+        },
+        {
             "name": "marble",
             "buildsystem": "cmake-ninja",
             "builddir": true,
