--- a/.flatpak-manifest.json
+++ b/.flatpak-manifest.json
@@ -15,6 +15,19 @@
         "--socket=wayland",
         "--device=dri"
     ],
+    "cleanup": [
+        "*.a",
+        "*.la",
+        "/include",
+        "/lib/cmake",
+        "/lib/pkgconfig",
+        "/lib/*/cmake",
+        "/lib/*/pkgconfig",
+        "/man",
+        "/share/cmake",
+        "/share/man",
+        "/share/pkgconfig"
+    ],
     "modules": [
         {
             "name": "kirigamiaddons",
