ci: require passing tests on all platforms
https://discuss.kde.org/t/test-failures-fatal-by-default-in-kde-ci/31670

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -15,6 +15,6 @@ Dependencies:
 
 Options:
  cmake-options: "-DBUILD_MARBLE_TOOLS=ON"
- require-passing-tests-on: [ 'Linux' ]
+ require-passing-tests-on: [ '@all' ]
  gcovr-arguments: '--gcov-ignore-parse-errors=negative_hits.warn'
 
