Restore thumbnailer functionality
The thumbnailers were never properly ported to KF6.

The code has multiple desktop files that all load the same thumbnailer plugin.

That approach does not work with KF6. Instead we need a proper plugin with
embedded JSON metadata for each.

--- a/src/plugins/runner/json/CMakeLists.txt
+++ b/src/plugins/runner/json/CMakeLists.txt
@@ -14,6 +14,9 @@ if(NOT KF6_FOUND)
     return()
 endif()
 
+kcoreaddons_add_plugin(marble_thumbnail_geojson SOURCES thumbnail.cpp INSTALL_NAMESPACE "kf6/thumbcreator")
+target_link_libraries(marble_thumbnail_geojson PRIVATE marblethumbnail)
+
 # register marble part as handler
 # install again once part is fixed to load and show the passed file
 # install(FILES marble_part_geojson.desktop DESTINATION ${KDE_INSTALL_KSERVICES5DIR})
