--- a/src/apps/marble-kde/org.kde.marble.desktop
+++ b/src/apps/marble-kde/org.kde.marble.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Type=Application
 TryExec=marble
-Exec=marble %F
+Exec=marble %U
 Name=KDE Marble
 Name[ar]=رخام كِيدِي
 Name[bg]=Marble KDE
@@ -132,5 +132,6 @@ Comment[zh_CN]=导航和地图
 Comment[zh_TW]=導覽地圖
 Icon=marble
 Categories=Qt;KDE;Education;Geoscience;Geography;Science;Maps;
+MimeType=x-scheme-handler/geo;x-scheme-handler/worldwind;
 StartupNotify=true
 X-DocPath=marble/index.html
