--- a/src/apps/behaim/org.kde.marble.behaim.desktop
+++ b/src/apps/behaim/org.kde.marble.behaim.desktop
@@ -37,3 +37,4 @@ Name[zh_TW]=Marble 倍海姆
 Exec=marble-behaim
 Icon=org.kde.marble.behaim
 Categories=Qt;KDE;Education;Geoscience;Geography;Science;Maps;
+StartupNotify=true
