--- a/src/apps/marble-qt/org.kde.marble-qt.desktop
+++ b/src/apps/marble-qt/org.kde.marble-qt.desktop
@@ -150,4 +150,5 @@ Comment[zh_CN]=导航和地图
 Comment[zh_TW]=導覽地圖
 Icon=marble
 Categories=Qt;KDE;Education;Geoscience;Geography;Science;Maps;
+StartupNotify=true
 X-DocPath=marble/index.html
