--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ include:
     - /gitlab-templates/windows-qt6.yml
     - /gitlab-templates/flatpak.yml
     - /gitlab-templates/clang-format.yml
+    - /gitlab-templates/documentation.yml
 
 # Manual job for building of maps.kde.org binaries
 maps-kde-org-binaries:
